@@ -170,10 +170,10 @@
 		};
 		29B97323FDCFA39411CA2CEA = {
 			children = (
-				F60DD8D00358A5D701C8ED3C,
 				29B97324FDCFA39411CA2CEA,
 				1058C7A1FEA54F0111CA2CBB,
 				29B97325FDCFA39411CA2CEA,
+				77AD447303ECA731004B557F,
 			);
 			isa = PBXGroup;
 			name = "Frameworks & Modules";
@@ -198,7 +198,7 @@
 				29B97328FDCFA39411CA2CEA,
 				29B9732BFDCFA39411CA2CEA,
 				29B9732DFDCFA39411CA2CEA,
-				F60DD8ED0358A61B01C8ED3C,
+				77AD48AF03ECA8D0004B557F,
 			);
 			buildSettings = {
 				FRAMEWORK_SEARCH_PATHS = "";
@@ -284,6 +284,7 @@
 			files = (
 				F60DD8CF0358A5C101C8ED3C,
 				77E8D26D03CF5BE1007B4ABE,
+				77AD48B103ECA8E2004B557F,
 			);
 			isa = PBXFrameworksBuildPhase;
 			runOnlyForDeploymentPostprocessing = 0;
@@ -327,6 +328,35 @@
 //772
 //773
 //774
+		77AD447303ECA731004B557F = {
+			includeInIndex = 1;
+			isa = PBXFolderReference;
+			name = PyObjC;
+			path = "/usr/lib/python2.2/site-packages/PyObjC";
+			refType = 0;
+		};
+		77AD48AF03ECA8D0004B557F = {
+			buildActionMask = 8;
+			dstPath = "";
+			dstSubfolderSpec = 7;
+			files = (
+				77AD48B003ECA8DA004B557F,
+			);
+			isa = PBXCopyFilesBuildPhase;
+			runOnlyForDeploymentPostprocessing = 1;
+		};
+		77AD48B003ECA8DA004B557F = {
+			fileRef = 77AD447303ECA731004B557F;
+			isa = PBXBuildFile;
+			settings = {
+			};
+		};
+		77AD48B103ECA8E2004B557F = {
+			fileRef = 1058C7A1FEA54F0111CA2CBB;
+			isa = PBXBuildFile;
+			settings = {
+			};
+		};
 		77E8D25403CF5BBD007B4ABE = {
 			buildActionMask = 2147483647;
 			files = (
@@ -539,67 +569,6 @@
 		};
 		F60DD8CF0358A5C101C8ED3C = {
 			fileRef = 29B97325FDCFA39411CA2CEA;
-			isa = PBXBuildFile;
-			settings = {
-			};
-		};
-		F60DD8D00358A5D701C8ED3C = {
-			children = (
-				F60DD8D10358A60901C8ED3C,
-				F60DD8D80358A60901C8ED3C,
-				F60DD8DD0358A60901C8ED3C,
-			);
-			isa = PBXGroup;
-			name = pyobjc;
-			refType = 4;
-		};
-		F60DD8D10358A60901C8ED3C = {
-			includeInIndex = 1;
-			isa = PBXFolderReference;
-			name = AppKit;
-			path = "/usr/lib/python2.2/site-packages/AppKit";
-			refType = 0;
-		};
-		F60DD8D80358A60901C8ED3C = {
-			includeInIndex = 1;
-			isa = PBXFolderReference;
-			name = Foundation;
-			path = "/usr/lib/python2.2/site-packages/Foundation";
-			refType = 0;
-		};
-		F60DD8DD0358A60901C8ED3C = {
-			includeInIndex = 1;
-			isa = PBXFolderReference;
-			name = objc;
-			path = "/usr/lib/python2.2/site-packages/objc";
-			refType = 0;
-		};
-		F60DD8ED0358A61B01C8ED3C = {
-			buildActionMask = 8;
-			dstPath = pyobjc;
-			dstSubfolderSpec = 7;
-			files = (
-				F60DD8EE0358A62701C8ED3C,
-				F60DD8EF0358A62701C8ED3C,
-				F60DD8F00358A62701C8ED3C,
-			);
-			isa = PBXCopyFilesBuildPhase;
-			runOnlyForDeploymentPostprocessing = 1;
-		};
-		F60DD8EE0358A62701C8ED3C = {
-			fileRef = F60DD8D10358A60901C8ED3C;
-			isa = PBXBuildFile;
-			settings = {
-			};
-		};
-		F60DD8EF0358A62701C8ED3C = {
-			fileRef = F60DD8D80358A60901C8ED3C;
-			isa = PBXBuildFile;
-			settings = {
-			};
-		};
-		F60DD8F00358A62701C8ED3C = {
-			fileRef = F60DD8DD0358A60901C8ED3C;
 			isa = PBXBuildFile;
 			settings = {
 			};
